--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -18,6 +18,11 @@
         
         <button v-bind:class="{ active: readyToSubmit }" v-on:click="submitRatio()" class="submit">submit</button>
       </div>
+      <div v-if="expanded" class="results">
+        <select multiple size="2">
+          <option v-for="sub of subRatios" value="">{{sub[0]}} <img src="../shared/images/ratiomatic-Template@2x.png"> {{sub[1]}}</option>
+        </select>
+      </div>
     </div>
 
     <script src="assets/scripts/index.js"></script>
